k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gke-tutorial-deployment
  namespace: default
  labels:
    app: gke-tutorial-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gke-tutorial-deployment
    spec:
      containers:
        - name: gke-tutorial-image
          image: gcr.io/client-backend-265323/gke-tutorial-image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
